tests/compile-fail/generated/derives-span-Clone-struct.stderr
error[E0277]: the trait bound `Error: std::clone::Clone` is not satisfied
  --> $DIR/derives-span-Clone-struct.rs:15:8
   |
15 |     x: Error
   |        ^^^^^ the trait `std::clone::Clone` is not implemented for `Error`
   |
   = note: required by `std::clone::Clone::clone`
